feat: 관리자 권한 엔티티 분리