@@ -4,18 +4,18 @@ import com.devpath.api.admin.dto.permission.InstructorGradeUpdateRequest;
 import com.devpath.api.admin.dto.permission.RoleCreateRequest;
 import com.devpath.api.admin.dto.permission.RoleResponse;
 import com.devpath.api.admin.dto.permission.UserPermissionResponse;
+import com.devpath.api.admin.entity.AdminPermission;
 import com.devpath.api.admin.entity.AdminRole;
+import com.devpath.api.admin.repository.AdminPermissionRepository;
 import com.devpath.api.admin.repository.AdminRoleRepository;
 import com.devpath.common.exception.CustomException;
 import com.devpath.common.exception.ErrorCode;
 import com.devpath.domain.user.entity.User;
 import com.devpath.domain.user.repository.UserRepository;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,6 +23,7 @@ import java.util.stream.Collectors;
 public class AdminPermissionService {
 
     private final AdminRoleRepository adminRoleRepository;
+    private final AdminPermissionRepository adminPermissionRepository;
     private final UserRepository userRepository;
 
     public RoleResponse createRole(RoleCreateRequest request) {
@@ -30,33 +31,74 @@ public class AdminPermissionService {
                 .roleName(request.getRoleName())
                 .description(request.getDescription())
                 .build();
-        return RoleResponse.from(adminRoleRepository.save(adminRole));
+
+        AdminRole savedRole = adminRoleRepository.save(adminRole);
+        savePermissions(savedRole, request.getPermissionCodes());
+
+        return RoleResponse.from(savedRole, getPermissionCodes(savedRole.getId()));
     }
 
     public RoleResponse updateRole(Long roleId, RoleCreateRequest request) {
         AdminRole adminRole = adminRoleRepository.findByIdAndIsDeletedFalse(roleId)
                 .orElseThrow(() -> new CustomException(ErrorCode.RESOURCE_NOT_FOUND));
+
         adminRole.update(request.getRoleName(), request.getDescription());
-        return RoleResponse.from(adminRole);
+
+        adminPermissionRepository.findByAdminRoleIdAndIsDeletedFalse(roleId)
+                .forEach(AdminPermission::delete);
+
+        savePermissions(adminRole, request.getPermissionCodes());
+
+        return RoleResponse.from(adminRole, getPermissionCodes(adminRole.getId()));
     }
 
     @Transactional(readOnly = true)
     public List<RoleResponse> getRoles() {
-        return adminRoleRepository.findByIsDeletedFalse().stream()
-                .map(RoleResponse::from)
-                .collect(Collectors.toList());
+        return adminRoleRepository.findByIsDeletedFalse()
+                .stream()
+                .map(role -> RoleResponse.from(role, getPermissionCodes(role.getId())))
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public UserPermissionResponse getUserPermission(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new CustomException(ErrorCode.ACCOUNT_NOT_FOUND));
+
         return UserPermissionResponse.from(user);
     }
 
     public void changeInstructorGrade(Long userId, InstructorGradeUpdateRequest request) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new CustomException(ErrorCode.ACCOUNT_NOT_FOUND));
+
         user.changeInstructorGrade(request.getGrade());
+    }
+
+    // role에 연결된 permission row를 일괄 저장한다.
+    private void savePermissions(AdminRole adminRole, List<String> permissionCodes) {
+        if (permissionCodes == null || permissionCodes.isEmpty()) {
+            return;
+        }
+
+        permissionCodes.stream()
+                .filter(code -> code != null && !code.isBlank())
+                .map(String::trim)
+                .distinct()
+                .forEach(code -> adminPermissionRepository.save(
+                        AdminPermission.builder()
+                                .adminRole(adminRole)
+                                .permissionCode(code)
+                                .description(code)
+                                .build()
+                ));
+    }
+
+    // 응답 DTO에는 현재 활성 permission code 목록만 내려준다.
+    private List<String> getPermissionCodes(Long roleId) {
+        return adminPermissionRepository.findByAdminRoleIdAndIsDeletedFalse(roleId)
+                .stream()
+                .map(AdminPermission::getPermissionCode)
+                .toList();
     }
 }
